add member and todo tag endpoint - api cli codegen draft - envrc completion
